force-app/main/default/objects/Ledger__c/Ledger__c.object-meta.xml
<CustomObject>
    <label>Ledger</label>
    <nameField>
        <label>Ledgers Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Ledgers</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>