force-app/main/default/objects/Ledger__c/fields/Accounting_Date__c.field-meta.xml
<CustomField>
    <fullName>Accounting_Date__c</fullName>
    <label>Accounting Date</label>
    <type>Date</type>
</CustomField>