force-app/main/default/objects/Ledger__c/fields/Applied_Invoice_Number__c.field-meta.xml
<CustomField>
    <fullName>Applied_Invoice_Number__c</fullName>
    <label>Applied Invoice Number</label>
    <length>12</length>
    <type>Text</type>
</CustomField>