force-app/main/default/objects/Ledger__c/fields/Bill_No__c.field-meta.xml
<CustomField>
    <fullName>Bill_No__c</fullName>
    <label>Bill No</label>
    <length>80</length>
    <type>Text</type>
</CustomField>