force-app/main/default/objects/Ledger__c/fields/Bill_To_Site_Number__c.field-meta.xml
<CustomField>
    <fullName>Bill_To_Site_Number__c</fullName>
    <displayFormat>{000000}</displayFormat>
    <label>Bill-To Site Number</label>
    <type>AutoNumber</type>
</CustomField>