force-app/main/default/objects/Ledger__c/fields/BVC_Branch__c.field-meta.xml
<CustomField>
    <fullName>BVC_Branch__c</fullName>
    <label>BVC Branch</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AGRA</fullName>
            </value>
            <value>
                <fullName>AHMEDABAD</fullName>
            </value>
            <value>
                <fullName>AMRITSAR</fullName>
            </value>
            <value>
                <fullName>AURANGABAD</fullName>
            </value>
            <value>
                <fullName>BENGALURU</fullName>
            </value>
            <value>
                <fullName>BHOPAL</fullName>
            </value>
            <value>
                <fullName>BHUBANESHWAR</fullName>
            </value>
            <value>
                <fullName>CALICUT</fullName>
            </value>
            <value>
                <fullName>CHANDIGARH</fullName>
            </value>
            <value>
                <fullName>CHENNAI</fullName>
            </value>
            <value>
                <fullName>COIMBATORE</fullName>
            </value>
            <value>
                <fullName>DEHRADUN</fullName>
            </value>
            <value>
                <fullName>DELHI</fullName>
            </value>
            <value>
                <fullName>DHARWAD</fullName>
            </value>
            <value>
                <fullName>GOA</fullName>
            </value>
            <value>
                <fullName>HYDERABAD</fullName>
            </value>
            <value>
                <fullName>INDORE</fullName>
            </value>
            <value>
                <fullName>JAIPUR</fullName>
            </value>
            <value>
                <fullName>JODHPUR</fullName>
            </value>
            <value>
                <fullName>KOCHI</fullName>
            </value>
            <value>
                <fullName>KOLHAPUR</fullName>
            </value>
            <value>
                <fullName>KOLKATA</fullName>
            </value>
            <value>
                <fullName>LUCKNOW</fullName>
            </value>
            <value>
                <fullName>MADURAI</fullName>
            </value>
            <value>
                <fullName>MANGALORE</fullName>
            </value>
            <value>
                <fullName>MUMBAI</fullName>
            </value>
            <value>
                <fullName>MUMBAI_BKC</fullName>
            </value>
            <value>
                <fullName>MUMBAI_ISD</fullName>
            </value>
            <value>
                <fullName>MUMBAI_SEZ</fullName>
            </value>
            <value>
                <fullName>NAGPUR</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>