force-app/main/default/objects/Ledger__c/fields/BVC_Company_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Company_ID__c</fullName>
    <label>BVC Company ID</label>
    <length>10</length>
    <type>Text</type>
</CustomField>