force-app/main/default/objects/Ledger__c/fields/BVC_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>BVC_Master_ID__c</fullName>
    <displayFormat>BVC{000000}</displayFormat>
    <label>BVC Master ID</label>
    <type>AutoNumber</type>
</CustomField>