force-app/main/default/objects/Ledger__c/fields/Debit_INR__c.field-meta.xml
<CustomField>
    <fullName>Debit_INR__c</fullName>
    <label>Debit(INR)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>