force-app/main/default/objects/Ledger__c/fields/Legal_Entity__c.field-meta.xml
<CustomField>
    <fullName>Legal_Entity__c</fullName>
    <label>Legal Entity</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>BVC Logistics Private Limited</fullName>
                <default>true</default>
                <label>BVC Logistics Private Limited</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>