force-app/main/default/objects/Ledger__c/fields/Original_Doc_No__c.field-meta.xml
<CustomField>
    <fullName>Original_Doc_No__c</fullName>
    <label>Original Doc No</label>
    <length>12</length>
    <type>Text</type>
</CustomField>