force-app/main/default/objects/Ledger__c/fields/PAN__c.field-meta.xml
<CustomField>
    <fullName>PAN__c</fullName>
    <label>PAN</label>
    <length>10</length>
    <required>true</required>
    <type>Text</type>
</CustomField>