force-app/main/default/objects/Ledger__c/fields/Particular__c.field-meta.xml
<CustomField>
    <fullName>Particular__c</fullName>
    <label>Particular</label>
    <type>TextArea</type>
</CustomField>