force-app/main/default/objects/Ledger__c/fields/Trade_Name__c.field-meta.xml
<CustomField>
    <fullName>Trade_Name__c</fullName>
    <label>Trade Name</label>
    <length>20</length>
    <type>Text</type>
</CustomField>