force-app/main/default/objects/Ledger__c/fields/Vch_Type__c.field-meta.xml
<CustomField>
    <fullName>Vch_Type__c</fullName>
    <label>Vch Type</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Opening Balance</fullName>
            </value>
            <value>
                <fullName>Closing Balance</fullName>
            </value>
            <value>
                <fullName>Total</fullName>
            </value>
            <value>
                <fullName>Invoice</fullName>
            </value>
            <value>
                <fullName>Bank Receipt App</fullName>
            </value>
            <value>
                <fullName>Bank Receipt Unapp</fullName>
            </value>
            <value>
                <fullName>Credit Memo</fullName>
            </value>
            <value>
                <fullName>Refund</fullName>
            </value>
            <value>
                <fullName>TDS Receipt</fullName>
            </value>
            <value>
                <fullName>Debit Memo</fullName>
            </value>
            <value>
                <fullName>Bank Receipt</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>